# LTColor

./: CMakeLists.txt  ColorDesktop.cpp  ColorDesktop.h  ColorDesktop.ui  DetailWidget.cpp  DetailWidget.h  DetailWidget.ui  MainWidget.cpp  MainWidget.h  MainWidget.ui  README.md  main.cpp
